Fix spacing/margins on modeled wind roses

--- a/assets/99_app.css
+++ b/assets/99_app.css
@@ -84,7 +84,7 @@ when the page is loading.
 }
 #future_rose {
 	max-width: 970px;
-	height: 600px;
+	height: 550px;
 }
 
 /*
